Move scrollbar fix to default styles

--- a/src/public/default.sass
+++ b/src/public/default.sass
@@ -77,3 +77,15 @@ $red: #fe5565
   -moz-user-select:       none
   -ms-user-select:        none
   user-select:            none
+
+
+html
+    overflow: scroll
+    overflow-x: hidden
+
+::-webkit-scrollbar
+    width: 0px
+    background: transparent
+
+::-webkit-scrollbar-thumb
+    background: #FF0000
